--- a/app/views/dashboard/_shortlist_card.html.erb
+++ b/app/views/dashboard/_shortlist_card.html.erb
@@ -1,3 +1,3 @@
-<div id="short-list-card" class="pt-6 px-6 bg-white rounded-[0.75rem] shadow-md h-full">
-    <span class="handle">+</span>
+<div id="short-list-card" class="pt-6 px-6 bg-white rounded-[0.75rem] shadow-md w-full h-full">
+    <h1 class="text-center pb-5 text-base font-semibold border-b border-[#DCDCDC]">Your Mentor Shortlist!</h1>
 </div>
