--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,9 @@
   <%= csp_meta_tag %>
   <script src="https://cdn.tailwindcss.com"></script>
   <%= render partial: "shared/cdn_assets" %>
-
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   <%= javascript_importmap_tags %>
+  <%= javascript_include_tag 'application' %>
 </head>
 <body class="min-h-screen flex flex-col">
 <% if current_page?(home_path) %>
