--- a/app/views/dashboard/_mentee_dashboard.html.erb
+++ b/app/views/dashboard/_mentee_dashboard.html.erb
@@ -17,7 +17,7 @@
       Discover insights and stories from our mentors to inspire your own journey.
     </p>
     <!-- Grid of mentors -->
-    <div id="mentor-list-section"  class="grid grid-cols-1 sm:grid-cols-2 gap-3 max-w-[55rem] place-content-center bg-[#202020]">
+    <div id="mentor-list-section"  class="grid grid-cols-1 sm:grid-cols-2 gap-3 max-w-[55rem] rounded-[0.55rem] place-content-center bg-[#202020]">
       <% available_mentors_count = 0 %>
       <% mentors_data.each do |mentor| %>
       <%# TODO: Refactor section below (might need to modify user methods in model or create new scope) %>
