added submit button to shortlist

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -3,3 +3,7 @@
     border: 1px solid #DCDCDC; 
     background-color: #f9f9f9; 
 }
+#short-list-card {
+    border: 1px solid #DCDCDC; 
+    background-color: #f9f9f9; 
+}
