--- a/app/views/dashboard/_shortlist_card.html.erb
+++ b/app/views/dashboard/_shortlist_card.html.erb
@@ -1,3 +1,11 @@
-<div id="short-list-card" class="pt-6 px-6 bg-white rounded-[0.75rem] shadow-md w-full h-full">
-    <h1 class="text-center pb-5 text-base font-semibold border-b border-[#DCDCDC]">Your Mentor Shortlist!</h1>
+<div class="pt-6 px-6 bg-white rounded-[0.75rem] shadow-md w-full h-full">
+    <h1 class="text-center pb-2 text-base font-semibold">
+        Your Mentor Shortlist!
+    </h1>
+    <div id="short-list-card" class="rounded-[0.55rem] h-5/6">
+    </div>
+    <button class="text-xs w-[70.073px] h-[32px] bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md "
+                    onclick="#">
+        Submit
+    </button>
 </div>
