--- a/app/views/dashboard/_profile_card_shortlist.html.erb
+++ b/app/views/dashboard/_profile_card_shortlist.html.erb
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="flex flex-col justify-center">
-      <button class="text-xs w-[70.073px] h-[32px] bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md hover:bg-transparent hover:text-[#202020] hover:border-[#202020]"
+      <button class="text-xs w-[70.073px] h-[32px] bg-[#202020] text-[#FFFFFF] mb-1 border border-transparent rounded-md hover:bg-transparent hover:text-[#202020] hover:border-[#202020]"
               onclick="location.href='<%= profile_path(mentor.id) %>'">
         View
       </button>
