--- a/app/views/dashboard/_shortlist_card.html.erb
+++ b/app/views/dashboard/_shortlist_card.html.erb
@@ -4,7 +4,7 @@
     </h1>
     <div id="short-list-card" class="rounded-[0.55rem] h-5/6">
     </div>
-    <button class="text-xs w-[70.073px] h-[32px] bg-[#202020] mt-2 text-[#FFFFFF] border border-transparent rounded-md "
+    <button class="text-xs w-[70.073px] h-[32px] bg-[#202020] mt-2 text-[#FFFFFF] border border-transparent rounded-md hover:bg-transparent hover:text-[#202020] hover:border-[#202020]"
                     onclick="#">
         Submit
     </button>
