changed mentor mentee forms to have proper roles

--- a/app/views/users/registrations/_mentor_form.html.erb
+++ b/app/views/users/registrations/_mentor_form.html.erb
@@ -71,7 +71,7 @@
 
   <%= f.simple_fields_for :cohorts, CohortMember.new do |cm| %>
     <%= cm.input :capacity, required: true, label: false, input_html: { class: "hidden" } %>
-    <%= cm.hidden_field :role, value: 'Mentee' %>
+    <%= cm.hidden_field :role, value: 'Mentor' %>
     <%= cm.hidden_field :cohort_id, value: Cohort.first.id %>
   <% end %>
 
