added a bit of formatting to the form and new cohort member page

--- a/app/views/cohort_members/_form.html.erb
+++ b/app/views/cohort_members/_form.html.erb
@@ -22,6 +22,12 @@
   </div>
 
   <div>
+    <%= form.label :cohort_id, style: "display: block" %>
+    <%= form.text_field :cohort_id %>
+  </div>
+
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
