--- a/app/views/cohort_members/new.html.erb
+++ b/app/views/cohort_members/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Cohort Member</h1>
+<h1 style="margin-top: 5rem;">New Cohort Member</h1>
 
 <%= render "form", cohort_member: @cohort_member %>
 
