--- a/app/views/cohort_members/new.html.erb
+++ b/app/views/cohort_members/new.html.erb
@@ -67,11 +67,11 @@
           <div class="flex space-x-2">
             <!-- Edit Button -->
             <button type="button" class="bg-green-200 p-1 rounded edit-email">
-              <svg class="w-4 h-4 text-green-600" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.414 2.586a2 2 0 0 1 2.828 2.828l-14.828 14.828h-4.828v-4.828l14.828-14.828z"/></svg>
+              <img src= <%= asset_path("icon/edit.svg") %> alt="edit icon"/>
             </button>
             <!-- Delete Button -->
             <button type="button" class="bg-red-200 p-1 rounded delete-email">
-              <svg class="w-4 h-4 text-red-600" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 6v18h18v-18h-18zm10 14h-2v-10h2v10zm4 0h-2v-10h2v10zm-8 0h-2v-10h2v10zm11-18v2h-14v-2h-5v2h3v18c0 1.104.896 2 2 2h16c1.104 0 2-.896 2-2v-18h3v-2h-5z"/></svg>
+              <img src= <%= asset_path("icon/delete.svg") %> alt="delete icon"/>
             </button>
           </div>
         </div>`;
