--- a/app/views/dashboard/_shortlist_card.html.erb
+++ b/app/views/dashboard/_shortlist_card.html.erb
@@ -3,6 +3,8 @@
         Your Mentor Shortlist!
     </h1>
     <div id="short-list-card" class="rounded-[0.55rem] h-5/6">
+        <h2 id="short-list-card-message"></h2>
+
     </div>
     <button id="submit-shortlist-button" class="text-xs w-[70.073px] h-[32px] mt-2 text-[#FFFFFF] border border-transparent rounded-md "
                     onclick="#">
