--- a/app/views/dashboard/_shortlist_card.html.erb
+++ b/app/views/dashboard/_shortlist_card.html.erb
@@ -1,4 +1,6 @@
+<%# Don't delete, but it can be styled. For js message%>
 <h2 id="short-list-card-message"></h2>
+
 <div id="shortlist-section" class="pt-6 px-6 bg-white rounded-[0.75rem] shadow-md w-full h-full">
     <h1 class="text-center pb-2 text-base font-semibold">
         Your Mentor Shortlist!
